panels: add NFC support

--- a/panels/meson.build
+++ b/panels/meson.build
@@ -7,7 +7,9 @@ panels = [
   'display',
   'keyboard',
   'mouse',
+  'mtp',
   'multitasking',
+  'nfc',
   'notifications',
   'online-accounts',
   'power',
