build: add "droidian" meson option
This can be used to enable Droidian-specific features or quirks.

Signed-off-by: Eugenio Paolantonio (g7) <me@medesimo.eu>

--- a/meson.build
+++ b/meson.build
@@ -281,6 +281,15 @@ location_services = get_option('location-services')
 config_h.set('HAVE_LOCATION_SERVICES', location_services.enabled(),
              description: 'Whether location services is enabled')
 
+# Droidian support
+enable_droidian = get_option('droidian')
+if enable_droidian
+  # Disable malcontent
+  config_h.set('HAVE_MALCONTENT_0_10', false)
+  config_h.set('HAVE_MALCONTENT', false)
+endif
+config_h.set('IS_DROIDIAN', enable_droidian, description: 'Define to 1 if droidian changes are needed')
+
 if host_is_linux
   # ModemManager
   mm_dep =  dependency('mm-glib', version: '>= 0.7')
