panels: Rework waydroid panel

--- a/debian/control
+++ b/debian/control
@@ -44,6 +44,7 @@ Build-Depends: debhelper-compat (= 13),
                libpulse-dev (>= 13.0~),
                libpwquality-dev (>= 1.2.2),
                libsecret-1-dev,
+               libpackagekit-glib2-dev,
                libsmbclient-dev (>= 2:3.6.12-1~),
                libsoup-3.0-dev,
                libudisks2-dev,
