--- a/panels/waydroid/icons/meson.build
+++ b/panels/waydroid/icons/meson.build
@@ -2,3 +2,7 @@ install_data(
   'scalable/org.gnome.Settings-waydroid-symbolic.svg',
   install_dir: join_paths(control_center_icondir, 'hicolor', 'scalable', 'apps')
 )
+install_data(
+  'scalable/F-Droid.svg',
+  install_dir: join_paths(control_center_icondir, 'hicolor', 'scalable', 'apps')
+)
