--- a/panels/waydroid/meson.build
+++ b/panels/waydroid/meson.build
@@ -11,11 +11,13 @@ i18n.merge_file(
 )
 
 sources = files(
-  'cc-waydroid-panel.c'
+  'cc-waydroid-panel.c',
+  'cc-waydroid-app-row.c'
 )
 
 resource_data = files(
-  'cc-waydroid-panel.ui'
+  'cc-waydroid-panel.ui',
+  'cc-waydroid-app-row.ui'
 )
 
 sources += gnome.compile_resources(
